--- a/projet_tetris/App.xaml
+++ b/projet_tetris/App.xaml
@@ -1,9 +1,5 @@
-﻿<Application x:Class="projet_tetris.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:projet_tetris"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+﻿<Application x:Class="Login_WPF.App"         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"    
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
+             StartupUri="view/Registration.xaml">
+    <Application.Resources></Application.Resources>
+</Application> 
