--- a/projet_tetris/view/Login.xaml
+++ b/projet_tetris/view/Login.xaml
@@ -1,18 +1,21 @@
 ﻿<Window x:Class="projet_tetris.model.Login"        
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
-        Title="Login" Height="324" Width="525">
+        Title="Login" Height="324" Width="525" Icon="/view/tetris.png">
+    <Window.Background>
+        <ImageBrush ImageSource="/view/background.png"/>
+    </Window.Background>
     <Grid Margin="0,0,0,80">
-        <TextBlock Height="31" HorizontalAlignment="Center" Margin="0,20,0,0" Name="LoginHeading" Text="Se connecter :" VerticalAlignment="Top" FontSize="24
-                   " FontStretch="ExtraCondensed" Width="155"/>
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="104,93,0,0" Name="textBlock1" Text="Email" VerticalAlignment="Top" Width="67" />
-        <TextBlock Height="23" HorizontalAlignment="Left" Margin="104,129,0,0" Name="textBlock2" Text="Mot de passe" VerticalAlignment="Top" Width="77" />
+        <TextBlock Height="31" HorizontalAlignment="Left" Margin="10,44,0,0" Name="LoginHeading" Text="Se connecter :" VerticalAlignment="Top" FontSize="24
+                   " FontStretch="ExtraCondensed" Width="155" Foreground="White"/>
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="104,93,0,0" Name="textBlock1" Text="Email" VerticalAlignment="Top" Width="67" Foreground="White" />
+        <TextBlock Height="23" HorizontalAlignment="Left" Margin="104,129,0,0" Name="textBlock2" Text="Mot de passe" VerticalAlignment="Top" Width="77" Foreground="White" />
         <TextBox Height="23" HorizontalAlignment="Left" Margin="185,93,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="247" />
         <PasswordBox Height="23" HorizontalAlignment="Left" Margin="185,129,0,0" Name="passwordBox1" VerticalAlignment="Top" Width="247" />
-        <Button Content="Se connecter" Height="23" HorizontalAlignment="Left" Margin="319,170,0,0" Name="button1" VerticalAlignment="Top" Width="113" Click="button1_Click" />
-        <Button Content="S'inscrire" Height="23" HorizontalAlignment="Left" Margin="185,170,0,0" Name="button2" VerticalAlignment="Top" Width="113" Click="Register_Click" />
+        <Button Content="Se connecter" Height="23" HorizontalAlignment="Left" Margin="319,170,0,0" Name="button1" VerticalAlignment="Top" Width="113" Background="#444490" Foreground="White" Click="button1_Click" />
+        <Button Content="S'inscrire" Height="23" HorizontalAlignment="Left" Margin="185,170,0,0" Name="button2" VerticalAlignment="Top" Width="113" Background="#444490" Foreground="White" Click="Register_Click" />
         <TextBlock Height="23" HorizontalAlignment="Left" x:Name ="errormessage" VerticalAlignment="Top" Width="247" Margin="118,253,0,0"  OpacityMask="Crimson" Foreground="#FFE5572C"  />
-       
+
 
 
     </Grid>
