--- a/projet_tetris/view/Tetris.xaml
+++ b/projet_tetris/view/Tetris.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="projet_tetris.view.Window2"
+﻿<Window x:Class="projet_tetris.view.Tetris"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:projet_tetris.view"
         mc:Ignorable="d"
-        Title="Tetris" Height="463" Width="467" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="CanMinimize">
+        Title="Tetris" Height="463" Width="467" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="CanMinimize" Icon="/view/tetris.png">
 
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
