--- a/projet_tetris/view/Tetris.xaml
+++ b/projet_tetris/view/Tetris.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:projet_tetris.view"
         mc:Ignorable="d"
-        Title="Tetris" Height="463" Width="467" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="CanMinimize" Icon="/view/tetris.png">
+        Title="Tetris" Height="463" Width="467" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="CanMinimize" Icon="/view/tetris.png" KeyDown="moveShape">
 
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -14,32 +14,36 @@
         </LinearGradientBrush>
     </Window.Background>
     <Grid x:Name="grid" Margin="0,0,0,1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="357*"/>
+            <ColumnDefinition Width="110*"/>
+        </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/view/background.png"/>
         </Grid.Background>
 
-        <Grid x:Name="tetrisGrid" Margin="28,17,0,0" Panel.ZIndex="2" Height="400" Width="250" HorizontalAlignment="Left" VerticalAlignment="Top" Background="Black">
+        <Grid x:Name="tetrisGrid" Margin="28,17,0,0" Panel.ZIndex="2" Height="400" Width="250" HorizontalAlignment="Left" VerticalAlignment="Top" Background="Black" ShowGridLines="True">
             <Grid.RowDefinitions>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25" ToolTip=""/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
-                <RowDefinition Height="25"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20" ToolTip=""/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="25"/>
@@ -57,9 +61,9 @@
         </Grid>
         <!--<Button x:Name="startStopBtn" Content="Start Game" HorizontalAlignment="Left" Margin="341,369,0,0" VerticalAlignment="Top" Width="93"  Click="Button_Click_1" Height="50"/>-->
         <Rectangle x:Name="back" HorizontalAlignment="Left" Height="405" Margin="26,15,0,0" VerticalAlignment="Top" Width="254" Fill="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="285,15,0,0" TextWrapping="Wrap" Text="Score" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A"/>
-        <TextBlock x:Name="scoreTxt" HorizontalAlignment="Left" Margin="285,49.665,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A" Text="0"/>
-        <Button Content="Se déconnecter" Height="23" HorizontalAlignment="Left" Margin="285,397,0,0" x:Name="Submit" VerticalAlignment="Top" Width="166" Click="Submit_Click" Background="#444490" Foreground="White" />
+        <TextBlock HorizontalAlignment="Left" Margin="285,15,0,0" TextWrapping="Wrap" Text="Score" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A" Grid.ColumnSpan="2"/>
+        <TextBlock x:Name="scoreTxt" HorizontalAlignment="Left" Margin="285,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A" Text="0" Grid.ColumnSpan="2"/>
+        <Button Content="Se déconnecter" Height="23" HorizontalAlignment="Left" Margin="285,397,0,0" x:Name="Submit" VerticalAlignment="Top" Width="166" Click="Submit_Click" Background="#444490" Foreground="White" Grid.ColumnSpan="2" />
 
     </Grid>
 </Window>
