--- a/projet_tetris/view/Login.xaml
+++ b/projet_tetris/view/Login.xaml
@@ -1,11 +1,26 @@
 ﻿<Window x:Class="projet_tetris.model.Login"        
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
-        Title="Login" Height="324" Width="525" Icon="/view/tetris.png">
-    <Window.Background>
-        <ImageBrush ImageSource="/view/background.png"/>
-    </Window.Background>
+       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:projet_tetris"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com/"
+        mc:Ignorable="d"
+        Title="Login" Height="324" Width="525" Icon="/view/tetris.png" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Margin="0,0,0,80">
+
+        <Grid.Background>
+            <VisualBrush>
+                <VisualBrush.Visual>
+                    <Image gif:ImageBehavior.AnimatedSource="background.gif"
+                   gif:ImageBehavior.AutoStart="True"
+                   gif:ImageBehavior.RepeatBehavior="1"/>
+                </VisualBrush.Visual>
+            </VisualBrush>
+        </Grid.Background>
+
+
+
         <TextBlock Height="31" HorizontalAlignment="Left" Margin="10,44,0,0" Name="LoginHeading" Text="Se connecter :" VerticalAlignment="Top" FontSize="24
                    " FontStretch="ExtraCondensed" Width="155" Foreground="White"/>
         <TextBlock Height="23" HorizontalAlignment="Left" Margin="104,93,0,0" Name="textBlock1" Text="Email" VerticalAlignment="Top" Width="67" Foreground="White" />
