--- a/projet_tetris/view/Registration.xaml
+++ b/projet_tetris/view/Registration.xaml
@@ -5,6 +5,9 @@
     <Window.Background>
         <ImageBrush ImageSource="/view/background.png"/>
     </Window.Background>
+    <Window.Effect>
+        <DropShadowEffect/>
+    </Window.Effect>
 
     <Grid Width="525" Margin="2,0,1,17">
         <TextBlock Height="23" HorizontalAlignment="Left" Margin="17,17,0,0" x:Name="textBlockHeading" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed" Foreground="White"><Run Language="fr-fr" Text="S'inscrire"/><LineBreak/><Run Language="fr-fr"/></TextBlock>
