--- a/projet_tetris/view/Tetris.xaml
+++ b/projet_tetris/view/Tetris.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:projet_tetris.view"
         mc:Ignorable="d"
-        Title="Tetris" Height="463" Width="467" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="CanMinimize" Icon="/view/tetris.png">
+        Title="Tetris" Height="463" Width="467" HorizontalAlignment="Left" VerticalAlignment="Top" ResizeMode="CanResize" Icon="/view/tetris.png" WindowStartupLocation="CenterScreen">
 
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
