--- a/projet_tetris/view/Tetris.xaml
+++ b/projet_tetris/view/Tetris.xaml
@@ -15,8 +15,8 @@
     </Window.Background>
     <Grid x:Name="grid" Margin="0,0,0,1">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="357*"/>
-            <ColumnDefinition Width="110*"/>
+            <ColumnDefinition Width="463*"/>
+            <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/view/background.png"/>
@@ -61,8 +61,8 @@
         </Grid>
         <!--<Button x:Name="startStopBtn" Content="Start Game" HorizontalAlignment="Left" Margin="341,369,0,0" VerticalAlignment="Top" Width="93"  Click="Button_Click_1" Height="50"/>-->
         <Rectangle x:Name="back" HorizontalAlignment="Left" Height="405" Margin="13,15,0,0" VerticalAlignment="Top" Width="254" Fill="White"/>
-        <TextBlock HorizontalAlignment="Left" Margin="285,15,0,0" TextWrapping="Wrap" Text="Score" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A" Grid.ColumnSpan="2"/>
-        <TextBlock x:Name="scoreTxt" HorizontalAlignment="Left" Margin="285,49.665,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A" Text="0"/>
+        <TextBlock HorizontalAlignment="Left" Margin="285,15,0,0" TextWrapping="Wrap" Text="Score" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A"/>
+        <TextBlock x:Name="scoreTxt" HorizontalAlignment="Left" Margin="285,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" Width="166" Foreground="White" FontSize="24" FontFamily="Showcard Gothic" TextAlignment="Center" Background="#FF564A4A" Text="0"/>
         <Button Content="Se déconnecter" Height="23" HorizontalAlignment="Left" Margin="285,397,0,0" x:Name="Submit" VerticalAlignment="Top" Width="166" Click="Disconnect_Click" Background="#444490" Foreground="White" />
         <Button Content="Profil" Height="23" HorizontalAlignment="Left" Margin="285,306,0,0" x:Name="Submit_Copy" VerticalAlignment="Top" Width="166" Click="Profil_Click" Background="#444490" Foreground="White" />
         <Button Content="Classement" Height="23" HorizontalAlignment="Left" Margin="285,278,0,0" x:Name="Submit_Copy1" VerticalAlignment="Top" Width="166" Click="Classement_Click" Background="#444490" Foreground="White" />
